5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1578_1327.log
== TEST (2019-03-14 19:30:15) 
-- CODE:
print("subtraçao: " 90 - 55)
-- ERROR:
File "XXXX", line 1
    print("subtraçao: " 90 - 55)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:44) 
-- CODE:
print( subtraçao: 90 - 55)
-- ERROR:
File "XXXX", line 1
    print( subtraçao: 90 - 55)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:31:56) 
-- CODE:
print("subtraçao:"  90 - 55)
-- ERROR:
File "XXXX", line 1
    print("subtraçao:"  90 - 55)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:32:10) 
-- CODE:
print(35)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:32:15) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.191008
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 16:56:37) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.179069
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 17:07:32) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.19947
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 17:15:00) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.15383
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:38) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.136631
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:03:55) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.172606
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:34:29) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.110019
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:33:19) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.11729
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:47:22) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.127625
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:47:22) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.121601
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:36:36) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.152008
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
